--- a/src/main/resources/templates/pages/books/list.html
+++ b/src/main/resources/templates/pages/books/list.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Books</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <section class="body-section">
-        <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+      <div th:replace="~{fragments/sidebar :: sidebar}"></div>
 
-        <main>
-            <h1>Library Books</h1>
-            <a href="/books/add" class="submit-btn">Add New Book</a>
+      <main>
+        <h1>Library Books</h1>
+        <a href="/books/add" class="submit-btn">Add New Book</a>
 
-            <div class="search-section">
-                <input type="text" id="searchQuery" placeholder="Search by title or author" />
-                <button id="searchBtn" class="submit-btn">Search</button>
-                <button id="showAllBtn">Show All</button>
-            </div>
+        <div class="search-section">
+          <input
+            type="text"
+            id="searchQuery"
+            placeholder="Search by title or author"
+          />
+          <button id="searchBtn" class="submit-btn">Search</button>
+          <button id="showAllBtn">Show All</button>
+        </div>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Title</th>
-                        <th>Author</th>
-                        <th>Genre</th>
-                        <th>Publication Year</th>
-                        <th>Availability Status</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="bookTable"></tbody>
-            </table>
-        </main>
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Title</th>
+              <th>Author</th>
+              <th>Genre</th>
+              <th>Publication Year</th>
+              <th>Availability Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="bookTable"></tbody>
+        </table>
+      </main>
     </section>
 
     <script src="/js/books/books-delete.js"></script>
     <script src="/js/books/books-list.js"></script>
     <script src="/js/sidebar.js"></script>
-</body>
+  </body>
 
-<footer>
-    Library Management System Project - AIU
-</footer>
-
+  <footer>Library Management System Project - AIU</footer>
 </html>
