--- a/src/main/resources/templates/pages/books/add.html
+++ b/src/main/resources/templates/pages/books/add.html
@@ -19,6 +19,7 @@
             <input type="text" name="coverUrl" placeholder="Cover Url" required>
             <input type="text" name="genre" placeholder="Genre" required>
             <input type="number" name="publicationYear" placeholder="Year" required>
+            <input type="number" name="quantity" placeholder="Quantity" min="0" value="1" required>
             <select name="availabilityStatus" title="Availability Status" required>
                 <option value="true">Available</option>
                 <option value="false">Not Available</option>
